--- a/Assignment 2/WebServer/www/root.html
+++ b/Assignment 2/WebServer/www/root.html
@@ -8,6 +8,10 @@
 			<li>/file/sample.html -- returns the content of the file sample.html</li>
 			<li>/json -- returns a json of the /random request</a></li>
 			<li>/random -- returns index.html</a></li>
+			<li>/multiply?num1=1&num2=2 -- returns the result of the multiplication</a></li>
+			<li>/github?query=users/amehlhase316/repos -- returns parsed json array of objects</a></li>
+			<li>/currency?str=dollar&num=10 -- returns the converted value between dollar and euro</a></li>
+			<li>/game?player1=rock&player2=rock -- returns the result of the rock-paper-scissor round</a></li>
 		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
 		${links}
